--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/nationalbim/vite.svg" />
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
@@ -13,8 +13,8 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>National Bim</title>
-    <script type="module" crossorigin src="/assets/index.f8681088.js"></script>
-    <link rel="stylesheet" href="/assets/index.6548b0e4.css">
+    <script type="module" crossorigin src="/nationalbim/assets/index.f8681088.js"></script>
+    <link rel="stylesheet" href="/nationalbim/assets/index.6548b0e4.css">
   </head>
   <body>
     <div id="root"></div>
